Default number format: decimal

--- a/assemblyMachine.html
+++ b/assemblyMachine.html
@@ -12,7 +12,7 @@ function init() {
     m = new machine();
     setButtonState();
     
-    binaryNumbersToggled=true;
+    binaryNumbersToggled = false;
     
     //file support
     if (window.File && window.FileReader && window.FileList && window.Blob) {
